fix(management): build modification
* use java 8 methods
* include `themes` folder in the distribution

Fixes gravitee-io/issues#4617